[package]
name = "sui-simulator"
version = "0.7.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
workspace-hack = { version = "0.1", path = "../workspace-hack" }
move-package.workspace = true

sui-adapter = { path = "../../sui-execution/latest/sui-adapter", package = "sui-adapter-latest" }

sui-framework.workspace = true
sui-move-build.workspace = true
sui-types.workspace = true
tempfile.workspace = true
tracing.workspace = true
anemo.workspace = true
anemo-tower.workspace = true
narwhal-network.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
telemetry-subscribers.workspace = true
tower.workspace = true
lru.workspace = true

[target.'cfg(msim)'.dependencies]
msim = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "d4ce4cf13ce1c268807275d337b75d8bf903663a", package = "msim" }
